src/objects/PM_Project__c.object
<CustomObject>
    <fields>
        <fullName>Handoff_Checklist_Status__c</fullName>
        <label>Handoff Checklist Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Handoff Email Sent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Handoff_Checklist_Verification_Date__c</fullName>
        <label>Handoff Checklist Verification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Handoff_Customer_Care_Comments__c</fullName>
        <description>Comments by Customer Care</description>
        <inlineHelpText>Comments by Customer Care</inlineHelpText>
        <label>Handoff Customer Care Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Handoff_Dedicate_Outlet_Breaker_Location__c</fullName>
        <label>Handoff Dedicate Outlet Breaker Location</label>
        <picklist>
            <picklistValues>
                <fullName>Main Panel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PV Sub Panel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PV Combiner Panel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Handoff_Dedicated_Outlet_for_Envoy__c</fullName>
        <label>Handoff Dedicated Outlet for Envoy</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Handoff_Dedicated_Outlet_is_GFCI__c</fullName>
        <description>Is the dedicated electrical outlet for Envoy GFCI ?</description>
        <inlineHelpText>Is the dedicated electrical outlet for Envoy GFCI ?</inlineHelpText>
        <label>Handoff Dedicated Outlet is GFCI</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Handoff_Distance_to_Mail_Supply_ft__c</fullName>
        <label>Handoff Distance to Mail Supply (ft.)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handoff_Email_Sent_Date__c</fullName>
        <label>Handoff Email Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Handoff_Enlighten_Activated__c</fullName>
        <label>Handoff Enlighten Activated</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Handoff_Enlighten_Verification_Date__c</fullName>
        <description>Date that Project Lead confirmed Enlighten design and registration was completed correctly with no alerts present</description>
        <inlineHelpText>Date that Project Lead confirmed Enlighten design and registration was completed correctly with no alerts present</inlineHelpText>
        <label>Handoff Enlighten Verification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Handoff_Enphase_ID__c</fullName>
        <description>ID of system in Enphase Enlighten portal</description>
        <inlineHelpText>ID of system in Enphase Enlighten portal</inlineHelpText>
        <label>Handoff Enphase ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handoff_Envoy_Location_Explanation__c</fullName>
        <description>If not next to panel, explanation of location</description>
        <inlineHelpText>If not next to panel, explanation of location</inlineHelpText>
        <label>Handoff Envoy Location Explanation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handoff_Envoy_Location__c</fullName>
        <label>Handoff Envoy Location</label>
        <picklist>
            <picklistValues>
                <fullName>Immediately next to panel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not immediately next to panel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Handoff_Is_Internet_Access__c</fullName>
        <label>Handoff Is Internet Access</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Handoff_Other_Big_Ticket_Electrical__c</fullName>
        <description>Other Big Ticket Electrical Item Type</description>
        <inlineHelpText>Other Big Ticket Electrical Item Type</inlineHelpText>
        <label>Handoff Other Big Ticket Electrical</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handoff_Other_Bridge_Install_Type__c</fullName>
        <description>Type of communication bridge installed if not one of the options on Bridge Type picklist</description>
        <inlineHelpText>Type of communication bridge installed if not one of the options on Bridge Type picklist</inlineHelpText>
        <label>Handoff Other Bridge Install Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handoff_Other_Internet_Access_Type__c</fullName>
        <description>Type of internet connection if not one of the options on Type of Internet Access picklist</description>
        <inlineHelpText>Type of internet connection if not one of the options on Type of Internet Access picklist</inlineHelpText>
        <label>Handoff Other Internet Access Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handoff_Other_Outlet_Breaker_Location__c</fullName>
        <label>Handoff Other Outlet Breaker Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handoff_Other_Revenue_Grade_Meter_Make__c</fullName>
        <description>Name of Manufacturer of Revenue Grade Meter</description>
        <inlineHelpText>Name of Manufacturer of Revenue Grade Meter</inlineHelpText>
        <label>Handoff Other Revenue Grade Meter Make</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handoff_Other_Revenue_Grade_Meter_Model__c</fullName>
        <description>Model Number of Revenue Grade Meter</description>
        <inlineHelpText>Model Number of Revenue Grade Meter</inlineHelpText>
        <label>Handoff Other Revenue Grade Meter Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handoff_Other_System_Location__c</fullName>
        <description>Location of system if not one of the options on picklist of System Location</description>
        <inlineHelpText>Location of system if not one of the options on picklist of System Location</inlineHelpText>
        <label>Handoff Other System Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handoff_Revenue_Grade_Meter_Installed__c</fullName>
        <label>Handoff Revenue Grade Meter Installed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Handoff_Revenue_Grade_Meter_Type__c</fullName>
        <label>Handoff Revenue Grade Meter Type</label>
        <picklist>
            <picklistValues>
                <fullName>Enphase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Locus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hialeah</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Itron</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Handoff_System_Location__c</fullName>
        <label>Handoff System Location</label>
        <picklist>
            <picklistValues>
                <fullName>Main House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Garage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ground Mount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Handoff_Type_of_Internet_Access__c</fullName>
        <description>Type of internet connection used by homeowner</description>
        <inlineHelpText>Type of internet connection used by homeowner</inlineHelpText>
        <label>Handoff Type of Internet Access</label>
        <picklist>
            <picklistValues>
                <fullName>Wireless/Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WiFi/Air Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inspection_Certificate_Date__c</fullName>
        <label>Inspection Certificate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inspection_Last_Updated__c</fullName>
        <description>Tracks when inspection date was last updated</description>
        <label>Inspection Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Inspection_Verified__c</fullName>
        <inlineHelpText>Inspection has been verified by either the VP of Ops or the Controller.</inlineHelpText>
        <label>Inspection Verified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inspection__c</fullName>
        <label>Inspection</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Inspection_to_Submit_Interconnect__c</fullName>
        <description>Proof of Inspection to Submit Utility Interconnect Part 2</description>
        <formula>Submitted_Utility_Interconnect_Part_2__c -Proof_of_Inspection__c</formula>
        <inlineHelpText>Proof of Inspection to Submit Utility Interconnect Part 2</inlineHelpText>
        <label>Inspection to Submit Interconnect</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Install_Last_Updated__c</fullName>
        <description>Tracks when Install date was last updated</description>
        <label>Install Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Install_Prep_Sheet__c</fullName>
        <label>Install Prep Sheet</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Install_Week_Start__c</fullName>
        <formula>Install__c - (MOD( Install__c - DATE(1900, 1, 1), 7))
/* MOD 6/12/14 LLH - changed DATE from 1900,1,6 to 1900,1,1 to correct for start of week */</formula>
        <label>Install Week Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Install__c</fullName>
        <label>Install</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Installation_Address__c</fullName>
        <formula>Sales_Order__r.Property__r.Name</formula>
        <label>Installation Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installation_City__c</fullName>
        <formula>Sales_Order__r.Property__r.Property_City__c</formula>
        <label>Installation City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installation_County__c</fullName>
        <formula>TEXT(Sales_Order__r.Property__r.Property_County__c)</formula>
        <label>Installation County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installation_Date__c</fullName>
        <formula>IF (ISPICKVAL(Status__c,&apos;Completed&apos;), Install__c, null)</formula>
        <label>Installation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Installation_Photos__c</fullName>
        <label>Installation Photos</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Installation_State__c</fullName>
        <formula>TEXT(Sales_Order__r.Property__r.Property_State__c)</formula>
        <label>Installation State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installation_Suite_Apt_Bld__c</fullName>
        <formula>Sales_Order__r.Property__r.Property_Address_2__c</formula>
        <label>Installation Suite/Apt/Bld</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installation_Zip_Code__c</fullName>
        <formula>LEFT(Sales_Order__r.Property__r.Property_ZIP__c,5)</formula>
        <label>Installation Zip Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installation_Zip_Plus_4__c</fullName>
        <formula>IF(LEN( Sales_Order__r.Property__r.Property_ZIP__c) = 10, MID(Sales_Order__r.Property__r.Property_ZIP__c,7,4), null)</formula>
        <label>Installation Zip Plus 4</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Structural_Engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The internal employee who will be the structural engineer</description>
        <inlineHelpText>The internal employee who will be the structural engineer</inlineHelpText>
        <label>Internal Structural Engineer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>contains</operation>
                <value>engineer</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>PM_Projects4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inverter_Type__c</fullName>
        <label>Inverter Type</label>
        <picklist>
            <picklistValues>
                <fullName>Enphase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SolarEdge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Invoice_at_Start_of_Installation__c</fullName>
        <label>Invoice at Start of Installation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job_Id__c</fullName>
        <description>Accounting Job Id</description>
        <formula>Sales_Order__r.Job_Id__c</formula>
        <inlineHelpText>Accounting Job Id</inlineHelpText>
        <label>Job Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kickoff_Documents__c</fullName>
        <label>Kickoff Documents</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Kickoff_Last_Updated__c</fullName>
        <label>Kickoff Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Kickoff_Photos__c</fullName>
        <label>Kickoff Photos</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Kickoff__c</fullName>
        <label>Kickoff</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Kickoff_to_Building_Permit_Submitted__c</fullName>
        <description>Kickoff to Building Permit Submitted</description>
        <formula>Building_Permit_Submitted__c -DATEVALUE( Kickoff__c )</formula>
        <inlineHelpText>Kickoff to Building Permit Submitted</inlineHelpText>
        <label>Kickoff to Building Permit Submitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Kickoff_to_Electrical_Review_Submitted__c</fullName>
        <description>Kickoff to Electrical Review Submitted</description>
        <formula>Electrical_Review_Submitted__c -  DATEVALUE(Kickoff__c)</formula>
        <inlineHelpText>Kickoff to Electrical Review Submitted</inlineHelpText>
        <label>Kickoff to Electrical Review Submitted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Kickoff_to_Interconnect_Part_1_Submitted__c</fullName>
        <description>Kickoff to Interconnect Part 1 Submitted</description>
        <formula>Submit_Utility_Interconnect_Part_1__c - DATEVALUE(Kickoff__c)</formula>
        <inlineHelpText>Kickoff to Interconnect Part 1 Submitted</inlineHelpText>
        <label>Kickoff to Interconnect Part 1 Submitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <formula>Sales_Order__r.Property__r.Latitude__c</formula>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lease_10_Invoice_Accepted__c</fullName>
        <description>LEASE ONLY - CEG 10% Invoice Accepted</description>
        <inlineHelpText>LEASE ONLY - CEG 10% Invoice Accepted</inlineHelpText>
        <label>Lease 10% Invoice Accepted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_10_Invoice_Submitted__c</fullName>
        <description>LEASE ONLY - CEG 10% Invoice Submitted</description>
        <inlineHelpText>LEASE ONLY - CEG 10% Invoice Submitted</inlineHelpText>
        <label>Lease 10% Invoice Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_30_Invoice_Accepted__c</fullName>
        <description>LEASE ONLY - CEG 30% Invoice Accepted</description>
        <inlineHelpText>LEASE ONLY - CEG 30% Invoice Accepted</inlineHelpText>
        <label>Lease 30% Invoice Accepted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_30_Invoice_Submitted__c</fullName>
        <description>LEASE ONLY - CEG 30% Invoice Submitted</description>
        <inlineHelpText>LEASE ONLY - CEG 30% Invoice Submitted</inlineHelpText>
        <label>Lease 30% Invoice Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_60_Invoice_Accepted__c</fullName>
        <description>LEASE ONLY - CEG 60% Invoice Accepted</description>
        <inlineHelpText>LEASE ONLY - CEG 60% Invoice Accepted</inlineHelpText>
        <label>Lease 60% Invoice Accepted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_60_Invoice_Submitted__c</fullName>
        <description>LEASE ONLY - CEG 60% Invoice Submitted</description>
        <inlineHelpText>LEASE ONLY - CEG 60% Invoice Submitted</inlineHelpText>
        <label>Lease 60% Invoice Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Approval_To_Inspect__c</fullName>
        <description>NRG Only</description>
        <label>Lease Approval To Inspect</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Commissioning_Checklist__c</fullName>
        <label>Lease Commissioning Checklist</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Contract_Approval__c</fullName>
        <label>Lease Contract Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Contract_Submission__c</fullName>
        <label>Lease Contract Submission</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Design_Submitted__c</fullName>
        <label>Lease Design Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Design__c</fullName>
        <label>Lease Design Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Equip_Delivery_Submitted__c</fullName>
        <inlineHelpText>Lease Equipment Delivery form Submitted</inlineHelpText>
        <label>Lease Equip Delivery Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Equip_Delivery__c</fullName>
        <description>Lease Equipment Delivery Confirmation</description>
        <inlineHelpText>Lease Equipment Delivery Confirmation</inlineHelpText>
        <label>Lease Equip Delivery</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Final_Package_Approved__c</fullName>
        <label>Lease Final Package Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Final_Package_Submission__c</fullName>
        <label>Lease Final Package Submission</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Funding_Status__c</fullName>
        <label>Lease Funding Status</label>
        <picklist>
            <picklistValues>
                <fullName>Change Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready to Prepare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready to Install</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lease_Homeowner_Paid_In_Full_Date__c</fullName>
        <description>LEASE ONLY - Homeowner Paid in Full Date</description>
        <inlineHelpText>LEASE ONLY - Homeowner Paid in Full Date</inlineHelpText>
        <label>Lease Homeowner Paid In Full Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Invoicing_Notes__c</fullName>
        <description>LEASE ONLY - Notes about Invoicing for Lease</description>
        <inlineHelpText>LEASE ONLY - Notes about Invoicing for Lease</inlineHelpText>
        <label>Lease Invoicing Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Procurement_Package_Approved__c</fullName>
        <label>Lease Procurement Package Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Procurement_Package_Submission__c</fullName>
        <label>Lease Procurement Package Submission</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Substantially_Complete_Approval__c</fullName>
        <label>Lease Substantially Complete Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Substantially_Complete__c</fullName>
        <inlineHelpText>Lease Substantially Complete / Approval to Interconnect</inlineHelpText>
        <label>Lease Substantially Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Substantially_Submitted__c</fullName>
        <inlineHelpText>Substantially Complete / Approval to Interconnect  Submitted</inlineHelpText>
        <label>Lease Substantially Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Locus_Mac_ID__c</fullName>
        <label>Locus Mac ID</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locus_Model__c</fullName>
        <label>Locus Model</label>
        <picklist>
            <picklistValues>
                <fullName>LGate101</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LGate120</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <formula>Sales_Order__r.Property__r.Longitude__c</formula>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mailing_Address__c</fullName>
        <formula>IF(FIND(&quot;\n&quot;, Sales_Order__r.Property__r.Property_Owner__r.BillingStreet) &gt; 0, 
LEFT(Sales_Order__r.Property__r.Property_Owner__r.BillingStreet, FIND(&quot;\n&quot;, Sales_Order__r.Property__r.Property_Owner__r.BillingStreet)),
Sales_Order__r.Property__r.Property_Owner__r.BillingStreet)</formula>
        <label>Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_City__c</fullName>
        <formula>Sales_Order__r.Property__r.Property_Owner__r.BillingCity</formula>
        <label>Mailing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Suite_Apt_Bld__c</fullName>
        <formula>IF (FIND(&quot;\n&quot;,Sales_Order__r.Property__r.Property_Owner__r.BillingStreet) &gt; 0,
MID(Sales_Order__r.Property__r.Property_Owner__r.BillingStreet, FIND(&quot;\n&quot;,Sales_Order__r.Property__r.Property_Owner__r.BillingStreet) + 1, LEN(Sales_Order__r.Property__r.Property_Owner__r.BillingStreet) - FIND(&quot;\n&quot;,Sales_Order__r.Property__r.Property_Owner__r.BillingStreet)  - 1),
null)</formula>
        <label>Mailing Suite/Apt/Bld</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Zip_Code__c</fullName>
        <formula>LEFT(Sales_Order__r.Property__r.Property_Owner__r.BillingPostalCode,5)</formula>
        <label>Mailing Zip Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Zip_Plus_4__c</fullName>
        <formula>IF (LEN(Sales_Order__r.Property__r.Property_Owner__r.BillingPostalCode) = 10,
MID(Sales_Order__r.Property__r.Property_Owner__r.BillingPostalCode,7,4),
null)</formula>
        <label>Mailing Zip Plus 4</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meter_Reading__c</fullName>
        <description>Initial Meter Reading for SRECs</description>
        <inlineHelpText>Initial Meter Reading for SRECs</inlineHelpText>
        <label>Meter Reading</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NJ_SREC_Application_Package__c</fullName>
        <label>NJ SREC Application Package</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NJ_SREC_Docs__c</fullName>
        <label>NJ SREC Docs</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Days_Open__c</fullName>
        <formula>TODAY() -   DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PL_Permit_Design_Package__c</fullName>
        <label>PL Permit Design Package</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Paid_In_Full__c</fullName>
        <label>Paid In Full</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Panel_and_Inverter_Serial_Numbers__c</fullName>
        <label>Panel and Inverter Serial Numbers</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Permit_Design__c</fullName>
        <label>Permit Design</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Permitting__c</fullName>
        <label>Permitting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prelim_PDP__c</fullName>
        <label>Prelim PDP</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prelim_Solar_Engineering_Review__c</fullName>
        <label>Prelim Solar Engineering Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prelim_Structural_Engineering_Review__c</fullName>
        <label>Prelim Structural Engineering Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Preliminary_Conduit_Run__c</fullName>
        <label>Preliminary Conduit Run</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Preliminary_Electric_Review__c</fullName>
        <label>Preliminary Electric Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Solar Engineer assigned to this Project.</description>
        <inlineHelpText>The Solar Engineer assigned to this Project.</inlineHelpText>
        <label>Solar Engineer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PM_Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Lead_Assignment_Date__c</fullName>
        <label>Project Lead Assignment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Project_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PM_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proof_of_Inspection__c</fullName>
        <label>Proof of Inspection</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Property_City_State__c</fullName>
        <formula>Sales_Order__r.System_Design_Quote__r.System_Design__r.Property__r.Property_City__c +&apos;, &apos;+ TEXT(Sales_Order__r.System_Design_Quote__r.System_Design__r.Property__r.Property_State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property City/State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Tax_Approved__c</fullName>
        <label>Property Tax Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Property_Tax_Submitted__c</fullName>
        <label>Property Tax Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pull_List__c</fullName>
        <label>Pull List</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RSM_Email__c</fullName>
        <formula>Salesperson__r.Manager.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RSM Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ready_for_Install__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ready for Install</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ready_for_Installation__c</fullName>
        <formula>IF(AND(NOT(ISBLANK( Survey_Docs__c ))
, NOT(ISBLANK(  Kickoff_Documents__c  ))
, NOT(ISBLANK(  Prelim_Structural_Engineering_Review__c  ))
, NOT(ISBLANK(  Preliminary_Electric_Review__c  ))
, NOT(ISBLANK(  Prelim_Solar_Engineering_Review__c  ))
, NOT(ISBLANK(  Approval_Final_Documents__c  ))
, NOT(ISBLANK(  Solar_Engineering__c  ))
, NOT(ISBLANK(  Structural_Engineering__c  ))
, NOT(ISBLANK(  Permit_Design__c  ))
, NOT(ISBLANK(  Electrical_Review__c  ))
, NOT(ISBLANK(  Approved_Utility_Interconnect_Part_1__c  ))
, NOT(ISBLANK( Lease_Design__c ))
, NOT(ISBLANK( Grant_Documents__c )))
,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ready for Installation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rebate_Status__c</fullName>
        <description>Status for Project Compliance to track PM Project process stages.</description>
        <formula>IF( ISNULL( Grant_Reservation_Submitted__c ), &quot;0-Reservation Not Submitted&quot;,

 IF( AND( ISNULL( Grant_Documents__c ),  NOT( ISNULL( Grant_Reservation_Submitted__c ))), &quot;1-Reservation Submitted, Not Approved&quot;,

 IF( AND( ISNULL( Grant_Completion_Completed__c ),  NOT( ISNULL( Grant_Documents__c ))), &quot;2-Reserved, Completion Not Posted&quot;,

 IF( AND( ISNULL( Work_Completed__c ),  NOT( ISNULL( Grant_Documents__c )),  NOT( ISNULL( Grant_Completion_Completed__c ))), &quot;3-Reserved, Work Not Complete&quot;,

 IF( AND( ISNULL( Grant_Completion_Submitted__c ),  NOT( ISNULL( Grant_Documents__c )),  NOT( ISNULL( Grant_Completion_Completed__c )),  NOT( ISNULL( Work_Completed__c ))), &quot;4-Installed, Completion 1 Not Submitted&quot;,

 IF( AND( ISNULL( Grant_Completion__c ),  NOT( ISNULL( Grant_Completion_Submitted__c ))), &quot;5-Completion 1 Submitted, Not Approved&quot;, 

 IF( AND( ISNULL( Approved_Utility_Interconnect_Part_2__c ),  NOT( ISNULL( Grant_Completion_Submitted__c )),  NOT( ISNULL( Grant_Completion__c ))), &quot;6-Completion 1 Approved, Awaiting PTO&quot;,

 IF( AND( ISNULL( Grant_Completion_Submitted_Part_2__c ),  NOT( ISNULL( Grant_Completion__c )),  NOT( ISNULL(  Approved_Utility_Interconnect_Part_2__c ))), &quot;7-PTO, Completion 2 Not Submitted&quot;,

 IF( AND( ISNULL( Grant_Completion_Approved_Part_2__c ),  NOT( ISNULL( Grant_Completion_Submitted_Part_2__c ))), &quot;8-Completion 2 Submitted, Not Approved&quot;,

 IF( NOT( ISNULL( Grant_Completion_Approved_Part_2__c )), &quot;9-Grant Complete&quot;, &quot;&quot; ))))))))))</formula>
        <label>Rebate Status</label>
        <type>Text</type>
    </fields>
</CustomObject>